--- a/prompt.html
+++ b/prompt.html
@@ -21,3 +21,4 @@ alert("Thank you for entering a quantity greater than 0.");
 onclick="promptQuantity();">
 </body>
 </html>
+<button><a href="https://judelesther.github.io/Alert/Alert.html"><br>Alert</a></button>
